# tree_compress

./: .gitignore  README.md  pyproject.toml  ruff.toml
.github/workflows/: python-package.yml
examples/: benchmarks.ipynb  blocksworld.ipynb  example.ipynb  two_moons.ipynb
experiment/: can_experiment.py  experiment.py  model_params.py  run.sh  util.py  verification.py
src/tree_compress/: __init__.py  aux.py  compress.py  lasso_compress.py  rebuild.py  util.py
tests/: test_compress.py  test_compress_old.py
