[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dtai_tree_compress"
version = "0.1"
authors = [
  { name="Laurens Devos" },
]
description = "TreeCompress: top-down compression of decision tree ensembles using L1 regularization"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy >= 1.26",
    "scikit-learn >= 1.4",
    "scipy >= 1.12",
    "dtai-veritas >= 0.2",
    "colorama",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/laudv/tree_compress"
Issues = "https://github.com/laudv/tree_compress/issues"

[tool.ruff]
target-version = "py38"
line-length = 88
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
# you can see the looong list of rules here:
# https://docs.astral.sh/ruff/rules/
select = [
  "A",    # warn about shadowing built-ins
  "E",    # style stuff, whitespaces
  "F",    # important pyflakes lints
  "I",    # import sorting
  "N",    # naming
  "T100", # breakpoints (probably don't want these in prod!)
]

[tool.ruff.lint.isort]
known-first-party = ["tree_compress"]
