[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dtai_tree_compress"
version = "0.1"
authors = [
    { name = "Laurens Devos", email = "laurens.devos@kuleuven.be" },
]
description = "TreeCompress: top-down compression of decision tree ensembles using L1 regularization"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy >= 1.26",
    "scikit-learn >= 1.4",
    "scipy >= 1.12",
    "dtai-veritas >= 0.2",
    "colorama",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[dependency-groups]
dev = [
    "pyright>=1.1.391",
    "pytest>=8.3.4",
    "ruff>=0.8.5"
]

[project.urls]
Homepage = "https://github.com/laudv/tree_compress"
Issues = "https://github.com/laudv/tree_compress/issues"

[tool.ruff]
target-version = "py38"
line-length = 88
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
# you can see the looong list of rules here:
# https://docs.astral.sh/ruff/rules/
select = [
  "A",    # warn about shadowing built-ins
  "E",    # style stuff, whitespaces
  "F",    # important pyflakes lints
  "I",    # import sorting
  "N",    # naming
  "T100", # breakpoints (probably don't want these in prod!)
]

[tool.ruff.lint.isort]
known-first-party = ["tree_compress"]

[tool.pyright]
venvPath = "."          # the venv is in the current dir
venv = ".venv"          #       in a folder called `.venv`
strict = ["**/*.py"]    # use 'strict' checking on all files
pythonVersion = "3.8"   # specify the _lowest_ you support

[tool.pytest.ini_options]
addopts = "--doctest-modules"
